Add drive current mileage contract and derived distance query
Agent-Logs-Url: https://github.com/Glueckhoch3/digital_driving_log/sessions/76f47604-5354-47bb-8790-afd336b96bae

Co-authored-by: Leonhardit07 <235579140+Leonhardit07@users.noreply.github.com>