@@ -7,13 +7,15 @@ import de.digidrivelog.models.Car;
 import de.digidrivelog.models.Drive;
 import de.digidrivelog.models.User;
 import de.digidrivelog.repositories.CarRepository;
+import de.digidrivelog.repositories.DriveDistanceProjection;
 import de.digidrivelog.repositories.DriveRepository;
 import de.digidrivelog.repositories.UserRepository;
 import de.digidrivelog.mappers.DriveMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
-import java.util.stream.Collectors;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -30,12 +32,12 @@ public class DriveService {
         User driver = userRepository.findById(request.getDriverId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Driver user not found"));
         Drive d = DriveMapper.fromCreate(request, car, driver);
         Drive saved = driveRepository.save(d);
-        return DriveMapper.toDto(saved);
+        return toDtoWithDrivenDistance(saved);
     }
 
     public DriveDto getDriveById(Long id) {
         Drive d = driveRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Drive not found"));
-        return DriveMapper.toDto(d);
+        return toDtoWithDrivenDistance(d);
     }
 
     public DriveDto updateDrive(Long id, UpdateDriveRequest request) {
@@ -44,7 +46,7 @@ public class DriveService {
         User driver = userRepository.findById(request.getDriverId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Driver user not found"));
         DriveMapper.applyUpdate(request, existing, car, driver);
         Drive saved = driveRepository.save(existing);
-        return DriveMapper.toDto(saved);
+        return toDtoWithDrivenDistance(saved);
     }
 
     public void deleteDrive(Long id) {
@@ -55,15 +57,52 @@ public class DriveService {
     }
 
     public List<DriveDto> getAllDrivesByVehicle(Long carId) {
-        return driveRepository.findByCarCarId(carId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
+        List<Drive> drives = driveRepository.findByCarCarId(carId);
+        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByCar(carId);
+        return drives.stream()
+                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
+                .toList();
     }
 
     public List<DriveDto> getAllDrivesByUser(Long userId) {
-        return driveRepository.findByDriverUserId(userId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
+        List<Drive> drives = driveRepository.findByDriverUserId(userId);
+        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByDriveList(drives);
+        return drives.stream()
+                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
+                .toList();
     }
 
     public List<DriveDto> getAllDrivesByVehicleAndUser(Long carId, Long userId) {
-        return driveRepository.findByCarCarIdAndDriverUserId(carId, userId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
+        List<Drive> drives = driveRepository.findByCarCarIdAndDriverUserId(carId, userId);
+        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByCar(carId);
+        return drives.stream()
+                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
+                .toList();
+    }
+
+    private DriveDto toDtoWithDrivenDistance(Drive drive) {
+        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByCar(drive.getCar().getCarId());
+        return DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId()));
+    }
+
+    private Map<Long, Integer> findDrivenDistanceByDriveList(List<Drive> drives) {
+        Map<Long, Integer> drivenDistanceByDriveId = new HashMap<>();
+        drives.stream()
+                .map(Drive::getCar)
+                .filter(car -> car != null && car.getCarId() != null)
+                .map(Car::getCarId)
+                .distinct()
+                .forEach(carId -> drivenDistanceByDriveId.putAll(findDrivenDistanceByCar(carId)));
+        return drivenDistanceByDriveId;
+    }
+
+    private Map<Long, Integer> findDrivenDistanceByCar(Long carId) {
+        List<DriveDistanceProjection> distances = driveRepository.findDrivenDistanceByCarId(carId);
+        Map<Long, Integer> drivenDistanceByDriveId = new HashMap<>();
+        for (DriveDistanceProjection distance : distances) {
+            drivenDistanceByDriveId.put(distance.getDriveId(), distance.getDrivenDistance());
+        }
+        return drivenDistanceByDriveId;
     }
 
 }
